# triplelite

./: .gitignore  .releaserc.json  CHANGELOG.md  LICENSE  README.md  REUSE.toml  meson.build  pyproject.toml
.github/workflows/: pages.yml  release.yml  reuse.yml  test.yml
docs/: astro.config.mjs  package-lock.json
docs/src/content/docs/: index.md
docs/src/content/docs/guide/: contributing.md  indexing.md  rdflib.md  rdfterm.md  subgraph.md
litegraph/: __init__.py  _graph.py  _rdflib_bridge.py  _types.py
tests/: test_litegraph.py  test_properties.py  test_triplelite.py
triplelite/: __init__.py  _core.c  _core.pyi  _graph.py  _rdflib_bridge.py  _types.py  dynarray.c  dynarray.h  hashmap.c  hashmap.h  intset.c  intset.h  meson.build  oa_hash.c  oa_hash.h  rdfterm_hashmap.c  rdfterm_hashmap.h  spo_index.c  spo_index.h
