[project]
name = "triplelite"
version = "1.2.0"
description = "Lightweight RDF graph with configurable indices"
license = "ISC"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Arcangelo Massari", email = "arcangelo.massari@unibo.it"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
rdflib = ["rdflib>=6.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "rdflib>=6.0.0",
    "pyright>=1.1.408",
    "ruff>=0.15.10",
    "pytest-cov>=7.1.0",
    "genbadge[coverage]>=1.1.3",
    "meson>=1.11.1",
    "meson-python>=0.19.0",
]

[build-system]
requires = ["meson-python>=0.18", "meson>=1.10"]
build-backend = "mesonpy"

[tool.ruff.lint]
select = ["I", "TID", "PLC0415"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]
